# cookiecutter-aws-sam-rust

./: README.md  cookiecutter.json  manifest.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py
templates/hello-world/: cookiecutter.json
templates/hello-world/{{ cookiecutter.project_slug }}/: Cargo.toml  Makefile  README.md  template.yaml
templates/hello-world/{{ cookiecutter.project_slug }}/src/: main.rs
templates/put-dynamodb/: cookiecutter.json
templates/put-dynamodb/{{ cookiecutter.project_slug }}/: Cargo.toml
templates/put-dynamodb/{{ cookiecutter.project_slug }}/src/: main.rs
