[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.14.0"
aws-sdk-dynamodb = "0.14.0"
aws-smithy-client = { version = "0.44.0", features = ["test-util"] }
lambda_http = "0.5.2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.44.0"
aws-types = { version = "0.14.0", features = ["hardcoded-credentials"] }
http = "0.2"